exports[`highlight item by mousing over item`] = `
<li
  className=""
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}>
  apple
</li>
`;

exports[`select item by clicking item`] = `
<li
  className="highlighted"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}>
  apple
</li>
`;
